# GrannyMail

./: .env.enc  .env.example  .example_env  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  cloudbuild.yaml  config.yaml  dev.env.enc  docker-compose.debug.yml  docker-compose.yaml  docker-compose.yml  prod.yaml.enc  pyproject.toml  requirements.txt  sandbox.ipynb
.github/workflows/: main.yaml  production.yaml
chatbot/: Dockerfile  Makefile  docker-compose.yaml  requirements.txt
chatbot/grannymail/: config.py  constants.py  db_client.py  logger.py  main.py  message_utils.py  pdf_gen.py  pingen.py  sandbox.ipynb  stripe.py  stripe_payments.py  telegrambot.py  utils.py
chatbot/scripts/: create_messages.py  update_system_messages.py
chatbot/tests/: conftest.py  fake_repositories.py  readme.md  test_api_entrypoint.py  test_bot.py  test_db_client.py  test_main.py  (+6 more)
grannymail/: Dockerfile  config.py  constants.py  db_client.py  message_utils.py  pingen.py  requirements.txt  telegrambot.py  utils.py
sandbox/: asyncio_sandbox.py  sandbox.ipynb
scripts/: create_messages.py  update_system_messages.py  yaml_to_env.py
server/: .dockerignore  database_utils.py  pingen.py  pyproject.toml  server.py
supabase/: config.toml
tests/: conftest.py  test_bot.py  test_db_client.py  test_message_utils.py  test_pdf_gen.py  test_project.py  test_utils.py
website/: package-lock.json  package.json  tsconfig.json
whatsgranny/: .envx  __init__.py  main.py  telegrambot.py  utils.py
worker_dashboard/: Dockerfile  requirements.txt
(+94 files in other folders)
