[tool.poetry]
name = "whatsgranny"
version = "0.1.0"
description = ""
authors = ["dominique-paul-uzh <dominique.c.a.paul@gmail.com>"]
readme = "README.md"
packages = [{include = "whatsgranny"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-core = "^2.11.0"
google-auth = "^2.17.3"
google-cloud-core = "^2.3.2"
google-cloud-storage = "^2.8.0"
google-cloud = "^0.34.0"
gunicorn = "^20.1.0"
mysql-connector-python = "^8.0.33"
openai = "^0.27.4"
redis = "^4.5.4"
requests = "^2.28.2"
rq = "^1.13.0"
supabase = "^1.0.3"
transformers = "^4.28.1"
whisper-openai = "^1.0.0"
rq-dashboard = {git = "https://github.com/jace/rq-dashboard.git", rev = "d506c6b43545e502673b32ed70a6d89d180ac324"}
python-dotenv = "^1.0.0"
twilio = "^8.1.0"
rapidfuzz = "^3.0.0"
reportlab = "^3.6.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
types-redis = "^4.5.4.1"
types-requests = "^2.28.11.17"
types-google-cloud-ndb = "^2.1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
